fixed emoji fountain issue on mobile

--- a/src/assets/css/theme-dark.css
+++ b/src/assets/css/theme-dark.css
@@ -11961,7 +11961,7 @@ a:focus, button:focus {
 
 #content {
   position: relative;
-  overflow-x: hidden; }
+  overflow: hidden; }
 
 .particle {
   position: absolute;
