--- a/src/assets/scss/_user.scss
+++ b/src/assets/scss/_user.scss
@@ -4,7 +4,7 @@
 //
 #content {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .particle {
   position: absolute;
